--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "create-corpus": "tsx scripts/create-corpus.ts"
   },
   "dependencies": {
     "@ai-sdk/google": "^2.0.46",
@@ -31,9 +35,12 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10",
     "postcss": "^8",
     "tailwindcss": "^4.0.0",
-    "typescript": "^5.7"
+    "tsx": "^4.21.0",
+    "typescript": "^5.7",
+    "vitest": "^3.2.4"
   }
 }
