--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
-    "create-corpus": "tsx scripts/create-corpus.ts"
+    "create-corpus": "tsx scripts/create-corpus.ts",
+    "list-corpora": "tsx scripts/list-corpora.ts",
+    "delete-all-corpora": "tsx scripts/delete-all-corpora.ts"
   },
   "dependencies": {
     "@ai-sdk/google": "^2.0.46",
@@ -26,6 +28,7 @@
     "@opentelemetry/semantic-conventions": "^1.38.0",
     "@tailwindcss/postcss": "^4.1.18",
     "ai": "^5.0.112",
+    "dotenv": "^17.2.3",
     "next": "^15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
