--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@tailwindcss/postcss": "^4.1.18",
     "ai": "^5.0.112",
     "dotenv": "^17.2.3",
+    "formdata-node": "^6.0.3",
     "next": "^15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
